Update endpoint name from 'stream_history' to 'chat'
The endpoint name 'stream_history' is replaced with 'chat' as it is more accurate. This change has been propagated across all test cases and frontend API calls. The function name corresponding to the endpoint is also updated in the main server python file.

--- a/js-chat.html
+++ b/js-chat.html
@@ -168,7 +168,7 @@
         // to the response of that request.
         async function fetchAi(history) {
             let content = JSON.stringify({messages: history});
-            return await fetch('http://localhost:8000/stream_history/', {
+            return await fetch('http://localhost:8000/chat/', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: content
